@startuml TaskGroupAggregation
title: TaskGroupAggregation

!include ../shared/theme.pu
!include ../shared/share.pu

package TaskGroupAggregation {
    ''' Entity '''
    class TaskGroup <<RootEntity>> {
        taskGroupId: TaskGroupId 
        taskGroupName: TaskGroupName  
        createdAt: CreatedAt
        updatedAt: UpdatedAt
    }


    ''' Value Object '''
    class  TaskGroupId <<IdValueObject>> {
        _value: string
    }
    class TaskGroupName <<StringValueObject>> {
        _value: string
    }


    ''' Relation '''
    TaskGroup -- TaskGroupId
    TaskGroup -- TaskGroupName
    TaskGroup -- CreatedAt
    TaskGroup -- UpdatedAt


    ''' Note '''
    note bottom of TaskGroupName
    MAX_LENGTH = 100
    MIN_LENGTH = 1
    end note 
}

@enduml